--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,20 +18,12 @@
   display: block;
   margin: 0 auto 25px;
 }
-body {
-  background-image: url('photo.avif');
-  background-size: cover;       
-  background-repeat: no-repeat; 
-  background-position: center;  
-  background-attachment: fixed; 
-}
-
 
     </style>
 </head>
 <body>
     <header>
-        <h1> KunalTechSpot.com </h1>
+        <h1> KunalPortfolio.com </h1>
         <p> Driven by Code, Powered by Fitness, Inspired by Life </p>
     </header>
     <nav>
@@ -44,7 +35,7 @@ body {
     </nav>
 
     <section id="Myself">
-        <img src="For website.png" alt="My Photo" class="photo">
+        <img src="For profile.png" alt="My Photo" class="photo">
         <h2>About the Author</h2>
         <p>I am Kunal Vinod Narkhede, a dedicated Computer Science student from India with a strong passion for both technology and fitness. My focus is on web development, where I enjoy creating user-friendly and efficient websites while continuously learning new programming languages and tools. Beyond academics, I am deeply committed to bodybuilding and powerlifting, which have taught me the value of discipline, consistency, and goal-setting. Nutrition is another key part of my lifestyle, helping me maintain balance and fuel both my physical and mental performance.
 
@@ -169,4 +160,4 @@ This website serves not only as a portfolio of my academic projects and skills b
 
     </section>
 </body>
-</html>
+  </html>
