--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <section id="Myself">
-        <img src="For profile.png" alt="My Photo" class="photo">
+        <img src="profile.png" alt="My Photo" class="photo">
         <h2>About the Author</h2>
         <p>I am Kunal Vinod Narkhede, a dedicated Computer Science student from India with a strong passion for both technology and fitness. My focus is on web development, where I enjoy creating user-friendly and efficient websites while continuously learning new programming languages and tools. Beyond academics, I am deeply committed to bodybuilding and powerlifting, which have taught me the value of discipline, consistency, and goal-setting. Nutrition is another key part of my lifestyle, helping me maintain balance and fuel both my physical and mental performance.
 
